[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "replayd"
version = "0.1.0"
description = "Turn failed AI agent runs into replayable regression tests"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
semantic = ["anthropic>=0.40.0"]
dev = [
    "pytest>=8.0",
    "anthropic>=0.40.0",
]

[project.urls]
Homepage = "https://stonepathlab.net"
Repository = "https://github.com/stonepath-labs/replayd"

[tool.hatch.build.targets.wheel]
packages = ["replayd"]

[tool.pytest.ini_options]
testpaths = ["tests"]
