[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "replayd"
version = "0.1.3"
description = "Turn failed AI agent runs into replayable regression tests"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = []
authors = [
    { name = "Taimoor Khan", email = "taimoorkhaniajaznabi@gmail.com" }
]
keywords = ["ai", "agents", "testing", "regression", "llm", "replay", "machine-learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.scripts]
replayd = "replayd.cli:main"

[project.optional-dependencies]
semantic = ["anthropic>=0.40.0"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "anthropic>=0.40.0",
]

[project.urls]
Homepage = "https://stonepathlab.net"
Repository = "https://github.com/TaimoorKhan10/replayd"

[tool.hatch.build.targets.wheel]
packages = ["replayd"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
